# Insightly

backend/: .env.example  config.py  main.py  pyproject.toml
backend/models/: schema.py
backend/services/: chunking.py  document.py  embeddings.py  rerank.py  response.py  search.py  vector_store.py
