[project]
name = "backend"
version = "0.1.0"
description = "Working end-to-end RAG pipeline - upload documents, ask questions, get cited answers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=7.0.4",
    "fastapi[standard]>=0.138.0",
    "httpx>=0.28.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langfuse>=4.10.0",
    "openai>=2.43.0",
    "pydantic-settings>=2.14.2",
    "pymupdf4llm>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
